# nautilus-launch

./: .editorconfig  ChangeLog  INSTALL  Makefile.am  NEWS  README  configure.ac  package.json
po/: LINGUAS  POTFILES.in  es.po  it.po  la.po  nl.po
src/: Makefile.am  nautilus-launch.c
